// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pretty Logging Will pretty log an object in context 1`] = `
"[4m[32m/test/spec/pretty.test.js[39m[24m
[37m[2018-05-18T16:25:57.815Z][39m [34mℹ info - hello world[39m
{
  \\"context\\": {
    \\"custom\\": {
      \\"a\\": 1,
      \\"b\\": 2
    }
  }
}
"
`;

exports[`Pretty Logging Will pretty log expected JSON properties 1`] = `
"[4m[32m/test/spec/pretty.test.js[39m[24m
[37m[2018-05-18T16:25:57.815Z][39m [34mℹ info - hello world[39m

"
`;
